--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -566,12 +566,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 4rem;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-48 {
   height: 12rem;
 }
 
-.h-10 {
-  height: 2.5rem;
+.h-80 {
+  height: 20rem;
+}
+
+.h-96 {
+  height: 24rem;
 }
 
 .w-full {
