feat(visitor): add visitor mouse in real time

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -484,6 +484,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.absolute {
+  position: absolute;
+}
+
 .m-4 {
   margin: 1rem;
 }
