starting admin & caching system

--- a/api/_assets/global-3T4MNM77.css
+++ b/api/_assets/global-3T4MNM77.css
@@ -194,12 +194,18 @@ footer ul li a.instagram:before {
 }
 
 main {
+  min-height: calc(100vh - var(--header-height) - 32px);
+  padding-bottom: 32px;
 }
 
 footer h2 {
   font-weight: var(--medium-font);
   text-align: center;
   font-size: 1rem;
+}
+
+.postThumb {
+  padding-bottom: var(--padding-base);
 }
 
 .button {
